--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -38,12 +39,16 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:support-vector-drawable:26.0.0'
     compile 'com.yarolegovich:discrete-scrollview:1.3.0'
     compile 'com.github.devlight:infinitecycleviewpager:1.0.2'
-    compile 'com.jakewharton:butterknife:8.8.1'
+
     testCompile 'junit:junit:4.12'
+    compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    compile 'cn.bmob.android:bmob-sdk:3.5.8'
+    compile 'cn.bmob.android:http-legacy:1.0'
 }
