--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://maven.google.com" }
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
 }
 
