--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:26.0.0'
     compile 'com.yarolegovich:discrete-scrollview:1.3.0'
     compile 'com.github.devlight:infinitecycleviewpager:1.0.2'
+    compile 'org.greenrobot:eventbus:3.0.0'
 
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:8.8.1'
