--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,8 +83,7 @@
         <service
             android:name="es.source.code.service.ServerObserverService"
             android:enabled="true"
-            android:exported="true"
-            android:process="es.source.code.observerservice" />
+            android:exported="true" />
         <service
             android:name="es.source.code.service.UpdateService"
             android:enabled="true"
