--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.yarolegovich:discrete-scrollview:1.3.0'
     compile 'com.github.devlight:infinitecycleviewpager:1.0.2'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.google.code.gson:gson:2.8.2'
 
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:8.8.1'
