--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:protectionLevel="dangerous" />
 
     <application
-        android:name="es.source.code.activity.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/socs_launcher"
         android:label="@string/app_name"
@@ -95,6 +95,14 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="es.source.code.br.CleanNotification"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="es.source.code.service.notification" />
             </intent-filter>
         </receiver>
     </application>
